...
    <string name="dont_have_account">Don\'t have account? Register</string>
    <string name="register_title">Get Started!</string>
    <string name="register_desc">Create new account</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="success">Success</string>
    <string name="login_success_desc">Welcome</string>
    <string name="empty_image_warning">Please enter the image file first.</string>
    <string name="empty_view">Nothing to see</string>
    <string name="story_name">Name</string>
    <string name="story_create">Created_at</string>
    <string name="story_desc">Description</string>
    <string name="photo_of_story">Photo of Story</string>
    <string name="req_password">Password minimum is 8 character</string>
    <string name="req_email">Email is not valid</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry">Retry Again</string>
    <string name="next">Next</string>
    <string name="placeholder_story" translatable="false">Placeholder Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="enter_location">Enter your location (optional)</string>
...
