...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fabLogout"
        app:layout_constraintEnd_toEndOf="@+id/fabLogout"
        app:srcCompat="@drawable/ic_add_a_photo_24"
        android:contentDescription="@string/add_story_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLogout"
...
